@@ -138,15 +138,33 @@
 [NO_PID]: sqlca: code: 0, state: 00000
 [NO_PID]: ecpg_execute line 88 Ok: CLOSE CURSOR
 [NO_PID]: sqlca: code: 0, state: 00000
-[NO_PID]: ecpg_execute line 89: QUERY: drop table test  with 0 parameter on connection main 
+[NO_PID]: ECPGdeallocate line 89: NAME: f
 [NO_PID]: sqlca: code: 0, state: 00000
-[NO_PID]: ecpg_execute line 89: using PQexec
+[NO_PID]: ECPGprepare line 93: NAME: f QUERY: select * from test where amount = $1
 [NO_PID]: sqlca: code: 0, state: 00000
-[NO_PID]: ecpg_execute line 89 Ok: DROP TABLE
+[NO_PID]: ecpg_execute line 94: QUERY: select * from test where amount = $1 with 1 parameter on connection main 
 [NO_PID]: sqlca: code: 0, state: 00000
-[NO_PID]: ECPGtrans line 90 action = commit connection = main
+[NO_PID]: ecpg_execute line 94: using PQexecPrepared for select * from test where amount = $1
 [NO_PID]: sqlca: code: 0, state: 00000
-[NO_PID]: ECPGdeallocate line 0: NAME: f
+[NO_PID]: free_params line 94: parameter 1 = 2
+[NO_PID]: sqlca: code: 0, state: 00000
+[NO_PID]: ecpg_execute line 94: Correctly got 1 tuples with 3 fields
+[NO_PID]: sqlca: code: 0, state: 00000
+[NO_PID]: ecpg_get_data line 94: RESULT: db: 'r1' offset: -1 array: Yes
+[NO_PID]: sqlca: code: 0, state: 00000
+[NO_PID]: ecpg_get_data line 94: RESULT: 2 offset: -1 array: Yes
+[NO_PID]: sqlca: code: 0, state: 00000
+[NO_PID]: ecpg_get_data line 94: RESULT: t offset: -1 array: Yes
+[NO_PID]: sqlca: code: 0, state: 00000
+[NO_PID]: ECPGdeallocate line 107: NAME: f
+[NO_PID]: sqlca: code: 0, state: 00000
+[NO_PID]: ecpg_execute line 108: QUERY: drop table test  with 0 parameter on connection main 
+[NO_PID]: sqlca: code: 0, state: 00000
+[NO_PID]: ecpg_execute line 108: using PQexec
+[NO_PID]: sqlca: code: 0, state: 00000
+[NO_PID]: ecpg_execute line 108 Ok: DROP TABLE
+[NO_PID]: sqlca: code: 0, state: 00000
+[NO_PID]: ECPGtrans line 109 action = commit connection = main
 [NO_PID]: sqlca: code: 0, state: 00000
 [NO_PID]: ECPGdeallocate line 0: NAME: i
 [NO_PID]: sqlca: code: 0, state: 00000
