@@ -9,3 +9,4 @@ name[5]=db: 'r1'	amount[5]=102	letter[5]=t
 name[6]=db: 'r1'	amount[6]=111	letter[6]=f
 name[7]=db: 'r1'	amount[7]=112	letter[7]=t
 name[0]=db: 'r1'	amount[0]=1	letter[0]=f
+name[0]=db: 'r1'	amount[0]=2	letter[0]=t
