@@ -2310,4 +2310,6 @@ Wed, 06 Feb 2008 09:04:48 +0100
 Thu, 14 Feb 2008 13:11:34 +0100
 
 	- Added SQLSTATE macro closing bug #3961.
+	- EXECUTE can return NOT FOUND so it should be checked here too.
+	- Changed regression test accordingly.
 
